Makefiles: use Intel LLVM compilers by default, GCC doesn't give any performance (maybe incompatible with Numba/LLVM?)

--- a/RACE/Makefile
+++ b/RACE/Makefile
@@ -2,8 +2,8 @@ include ../make.inc
 
 OBJ=sparsemat.o densemat.o mpk.o
 
-libmpk.so: ${OBJ}
+libmpk.so: ${OBJ} Makefile ../make.inc
 	${CXX} ${CXXFLAGS} -I${RACE_INCDIR} -I./include/ -shared -o lib/libmpk.so ${OBJ} -L${RACE_LIBDIR} -lhwloc -lRACE -Wl,-rpath=${PWD}/lib/
 
-%.o: %.c
+%.o: %.c Makefile ../make.inc
 	${CXX} ${CXXFLAGS} -I${RACE_INCDIR} -I./include/ -c $<
