--- a/RACE/Makefile
+++ b/RACE/Makefile
@@ -1,9 +1,11 @@
 include ../make.inc
 
+CXXFLAGS+=-I${RACE_INCDIR} -I./include/ -std=c++17
+
 OBJ=sparsemat.o densemat.o mpk.o
 
-libmpk.so: ${OBJ} Makefile ../make.inc
-	${CXX} ${CXXFLAGS} -I${RACE_INCDIR} -I./include/ -shared -o lib/libmpk.so ${OBJ} -L${RACE_LIBDIR} -lhwloc -lRACE -Wl,-rpath=${PWD}/lib/
+lib/libmpk.so: ${OBJ} Makefile ../make.inc
+	${CXX} ${CXXFLAGS} -shared -o lib/libmpk.so ${OBJ} -L${PWD}/lib -lhwloc -L${RACE_LIBDIR} -lRACE -Wl,-rpath=${PWD}/lib
 
-%.o: %.c Makefile ../make.inc
-	${CXX} ${CXXFLAGS} -I${RACE_INCDIR} -I./include/ -c $<
+clean:
+	rm lib/libmpk.so *.o
